tests/baselines/reference/privateVisibility.errors.txt
tests/cases/compiler/privateVisibility.ts(9,1): error TS8010: Property 'privMeth' is private and only accessible within struct 'Foo'.
tests/cases/compiler/privateVisibility.ts(10,1): error TS8010: Property 'privProp' is private and only accessible within struct 'Foo'.
tests/cases/compiler/privateVisibility.ts(24,1): error TS8010: Property 'priv' is private and only accessible within struct 'C'.


==== tests/cases/compiler/privateVisibility.ts (3 errors) ====
    class Foo {
    	public pubMeth() {this.privMeth();}
    	private privMeth() {}
    	public pubProp = 0;
    	private privProp = 0;
    }
    
    var f = new Foo();
    f.privMeth(); // should not work
    ~~~~~~~~~~
!!! error TS8010: Property 'privMeth' is private and only accessible within struct 'Foo'.
    f.privProp; // should not work
    ~~~~~~~~~~
!!! error TS8010: Property 'privProp' is private and only accessible within struct 'Foo'.
    
    f.pubMeth(); // should work
    f.pubProp; // should work
    
    module M {
        export class C { public pub = 0; private priv = 1; }
        export var V = 0;
    }
    
    
    var c = new M.C();
    
    c.pub; // should work
    c.priv; // should not work
    ~~~~~~
!!! error TS8010: Property 'priv' is private and only accessible within struct 'C'.
    
    